--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
 	"dependencies": {
 		"@modelcontextprotocol/sdk": "^1.9.0",
 		"@xava-labs/mcp": "0.1.1",
+		"@solana/web3.js": "^1.95.8",
+		"@solana/spl-token": "^0.4.9",
+		"twitter-api-v2": "^1.18.2",
+		"axios": "^1.7.9",
 		"zod": "^3.23.8"
 	}
 }
