--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
 	},
 	"dependencies": {
 		"@modelcontextprotocol/sdk": "^1.9.0",
-		"@xava-labs/mcp": "0.1.1",
+		"@nullshot/mcp": "^0.3.6",
 		"@solana/web3.js": "^1.95.8",
 		"@solana/spl-token": "^0.4.9",
 		"twitter-api-v2": "^1.18.2",
